<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_http"
            android:icon="@drawable/ic_menu_http"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_tcp_client"
            android:icon="@drawable/ic_menu_client"
            android:title="@string/menu_tcp_client" />
        <item
            android:id="@+id/nav_tcp_server"
            android:icon="@drawable/ic_menu_server"
            android:title="@string/menu_tcp_server" />

        <item
            android:id="@+id/nav_bluetooth"
            android:icon="@drawable/ic_menu_bluetooth"
            android:title="@string/menu_bluetooth" />

        <item
            android:id="@+id/nav_nfc"
            android:icon="@drawable/ic_menu_nfc"
            android:title="@string/menu_nfc" />
    </group>
</menu>