<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textViewHttpMethod"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:text="@string/method"
                    android:textColor="@color/text_hint"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/buttonHttpMethod"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:background="?attr/selectableItemBackground"
                    android:clickable="true"
                    android:focusable="true"
                    android:paddingStart="15dp"
                    android:paddingTop="5dp"
                    android:paddingEnd="15dp"
                    android:paddingBottom="5dp"
                    android:text="@string/method_get"
                    android:textColor="@color/text_content"
                    android:textSize="13sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textViewHttpUrl"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:text="@string/url"
                    android:textColor="@color/text_hint"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/buttonHttpUrl"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:background="?attr/selectableItemBackground"
                    android:clickable="true"
                    android:focusable="true"
                    android:paddingStart="15dp"
                    android:paddingTop="5dp"
                    android:paddingEnd="15dp"
                    android:paddingBottom="5dp"
                    android:text="@string/ylarod_blog_url"
                    android:textColor="@color/text_content"
                    android:textSize="13sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/textViewHttpParameter"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_marginStart="15dp"
                        android:text="@string/parameter"
                        android:textColor="@color/text_hint"
                        android:textSize="16sp" />

                    <ImageButton
                        android:id="@+id/buttonHttpParameterClean"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_alignParentEnd="true"
                        android:layout_marginEnd="10dp"
                        android:background="?attr/selectableItemBackground"
                        android:src="@drawable/ic_clean" />
                </RelativeLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_toStartOf="@+id/parameter_add_button">

                            <EditText
                                android:id="@+id/parameter_key_edit_text"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:hint="@string/key" />

                            <EditText
                                android:id="@+id/parameter_value_edit_text"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:hint="@string/value" />
                        </LinearLayout>

<!--                        <Button-->
<!--                            android:id="@+id/parameter_add_button"-->
<!--                            android:layout_width="wrap_content"-->
<!--                            android:layout_height="wrap_content"-->
<!--                            android:layout_alignParentEnd="true"-->
<!--                            android:paddingStart="10dp"-->
<!--                            android:paddingTop="10dp"-->
<!--                            android:paddingEnd="10dp"-->
<!--                            android:paddingBottom="10dp"-->
<!--                            android:text="@string/add" />-->

                        <TextView
                            android:id="@+id/parameter_add_button"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:layout_marginTop="5dp"
                            android:background="?attr/selectableItemBackground"
                            android:clickable="true"
                            android:focusable="true"
                            android:paddingTop="5dp"
                            android:paddingBottom="5dp"
                            android:text="@string/add_item"
                            android:textAlignment="center"
                            android:textColor="@color/text_hint"
                            android:textSize="18sp" />
                    </RelativeLayout>

                    <include
                        android:id="@+id/tabs_content"
                        layout="@layout/key_value_pair_row" />

                    <ListView
                        android:id="@+id/parameter_list_view"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/textViewHttpHeader"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:text="@string/headers"
                        android:textColor="@color/text_hint"
                        android:textSize="16sp" />

                    <ImageButton
                        android:id="@+id/buttonHttpHeaderClean"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_alignParentEnd="true"
                        android:layout_marginEnd="10dp"
                        android:background="?attr/selectableItemBackground"
                        android:src="@drawable/ic_clean" />
                </RelativeLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_toStartOf="@+id/header_add_button">

                            <EditText
                                android:id="@+id/header_key_edit_text"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:hint="@string/key" />

                            <EditText
                                android:id="@+id/header_value_edit_text"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:hint="@string/value" />
                        </LinearLayout>

<!--                        <Button-->
<!--                            android:id="@+id/header_add_button"-->
<!--                            android:layout_width="wrap_content"-->
<!--                            android:layout_height="wrap_content"-->
<!--                            android:layout_alignParentEnd="true"-->
<!--                            android:paddingStart="10dp"-->
<!--                            android:paddingTop="10dp"-->
<!--                            android:paddingEnd="10dp"-->
<!--                            android:paddingBottom="10dp"-->
<!--                            android:text="Add" />-->

                        <TextView
                            android:id="@+id/header_add_button"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:layout_marginTop="5dp"
                            android:background="?attr/selectableItemBackground"
                            android:clickable="true"
                            android:focusable="true"
                            android:paddingTop="5dp"
                            android:paddingBottom="5dp"
                            android:text="@string/add_item"
                            android:textAlignment="center"
                            android:textColor="@color/text_hint"
                            android:textSize="18sp" />
                    </RelativeLayout>

                    <include
                        android:id="@+id/content"
                        layout="@layout/key_value_pair_row"/>

                    <ListView
                        android:id="@+id/header_list_view"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>